# cuda-matrix-multiplication

./: CMakeLists.txt  README.md
include/: utils.hpp
scripts/: plot.py  test.sh
src/: getDeviceProps.cu  matrixMulKernel.cu  matrixMulKernelShared.cu
